<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    android:background="#c64f4543">

    <RadioGroup
        android:id="@+id/orderOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyRadioButton"
            android:text="@string/ratio_btn_all"/>

        <RadioButton
            android:id="@+id/undelivered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratio_btn_undelivered"
            android:checked="true"
            style="@style/MyRadioButton"/>

        <RadioButton
            android:id="@+id/delivered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratio_btn_delivered"
            style="@style/MyRadioButton"/>

        <RadioButton
            android:id="@+id/abnormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratio_btn_abnormal"
            style="@style/MyRadioButton"/>

        <RadioButton
            android:id="@+id/postFail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratio_btn_post_fail"
            style="@style/MyRadioButton" />

    </RadioGroup>


    <RadioGroup
        android:id="@+id/sortOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/sortByCreateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratio_btn_sort_by_create_time"
            android:checked="true"
            style="@style/MyRadioButton"/>

    </RadioGroup>


    <RadioGroup
        android:id="@+id/sortOptionExtra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/ascending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratio_btn_ascending"
            style="@style/MyRadioButton"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/descending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratio_btn_descending"
            style="@style/MyRadioButton" />

    </RadioGroup>

</LinearLayout>