<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="10dp">
    
    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_sign_in_item"
        android:hint="@string/hint_user_name"/>
    
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_sign_in_item"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>


    <Button
        android:id="@+id/sign_in"
        android:layout_width="@dimen/width_sign_in_btn"
        android:layout_height="@dimen/height_sign_in_item"
        android:text="@string/btn_sign_in"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="@dimen/width_sign_in_btn"
        android:layout_height="@dimen/height_sign_in_item"
        android:text="@string/btn_sign_up"/>



</LinearLayout>