<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider_dialog_set_repeat"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <RadioGroup
        android:id="@+id/opt_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_dialog_set_repeat_text"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/opt_everyday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repeat_opt_everyday"
            android:textAppearance="?android:textAppearanceSmall" />

        <RadioButton
            android:id="@+id/opt_weekdays"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repeat_opt_weekdays"
            android:textAppearance="?android:textAppearanceSmall" />

        <RadioButton
            android:id="@+id/opt_never"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/repeat_opt_never"
            android:textAppearance="?android:textAppearanceSmall" />

    </RadioGroup>

    <CheckedTextView
        android:id="@+id/monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_dialog_set_repeat_text"
        android:checkMark="?android:listChoiceIndicatorMultiple"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/monday"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckedTextView
        android:id="@+id/tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/width_dialog_divider"
        android:background="@color/bg_dialog_set_repeat_text"
        android:checkMark="?android:listChoiceIndicatorMultiple"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/tuesday"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckedTextView
        android:id="@+id/wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/width_dialog_divider"
        android:background="@color/bg_dialog_set_repeat_text"
        android:checkMark="?android:listChoiceIndicatorMultiple"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/wednesday"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckedTextView
        android:id="@+id/thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/width_dialog_divider"
        android:background="@color/bg_dialog_set_repeat_text"
        android:checkMark="?android:listChoiceIndicatorMultiple"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/thursday"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckedTextView
        android:id="@+id/friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/width_dialog_divider"
        android:background="@color/bg_dialog_set_repeat_text"
        android:checkMark="?android:listChoiceIndicatorMultiple"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/friday"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckedTextView
        android:id="@+id/saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/width_dialog_divider"
        android:background="@color/bg_dialog_set_repeat_text"
        android:checkMark="?android:listChoiceIndicatorMultiple"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/saturday"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckedTextView
        android:id="@+id/sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/width_dialog_divider"
        android:background="@color/bg_dialog_set_repeat_text"
        android:checkMark="?android:listChoiceIndicatorMultiple"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/sunday"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/width_dialog_divider"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bg_dialog_set_repeat_text"
            android:layout_marginRight="@dimen/width_dialog_divider_half"
            android:layout_marginEnd="@dimen/width_dialog_divider_half"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@android:string/ok"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="@dimen/width_dialog_divider_half"
            android:layout_marginStart="@dimen/width_dialog_divider_half"
            android:background="@color/bg_dialog_set_repeat_text"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@android:string/cancel"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

</LinearLayout>